# steuerboard

./: .gitignore  Makefile  README.md  TASK_COMPLETED.txt  fix_import.py  fix_import2.py  fix_import3.py  fix_md.py  patch2.sh  patch_schema_examples.py  patch_schema_examples2.py  patch_schema_val.py  patch_tests.py  patch_validate.py  pr_report.txt  pyproject.toml  test_pattern.py  x.patch
.github/: pr83-guard-update.patch.gz.b64
backend/: README.md
cli/: README.md
docs/: action-model.md  approval-model.md  architecture.md  assessment-model.md  evidence-model.md  falsification-cases.md  freshness-model.md  git-pull-ff-only-contract.md  heimserver-service-gate-model.md  local-cli-deploy.md  local-scope-model.md  masterplan.md  observation-model.md  omnipull-integration.md  operational-profile.md  operator-report-usage-probe.md  planning-model.md  redaction-model.md  remote-refresh-model.md  retention-model.md  roadmap.md  runbook-model.md  security-model.md  source-of-truth-model.md  switch-main-readiness-contract.md  ui-readonly-contract.md  vision.md
frontend/: README.md  index.html
runtime/: ipad-heim-pc-wol-ssh-2026-05-10.md  ipad-remote-access-wol-ssh-2026-05-09.md  net-chico-lan-throughput-2026-05-18.md  runtime.md
schemas/: action-approval-validation.v1.schema.json  action-approval.v1.schema.json  action-capability.v1.schema.json  action-execution-readiness.v1.schema.json  action-plan.v1.schema.json  action-preflight-binding.v1.schema.json  command-trace.v1.schema.json  falsification-case.v1.schema.json  heimserver-service-evidence.v1.schema.json  heimserver-service-expectation.v1.schema.json  (+31 more)
(+346 files in other folders)
