[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steuerboard"
version = "0.0.0"
description = "Documentation, schemas, validation scaffolding, and read-only observation tooling for steuerboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.22",
]

[project.scripts]
steuerboard = "steuerboard.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["steuerboard", "steuerboard.*"]
